<resources>
    <string name="app_name">UrbaBus</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="admin">Administrador</string>
    <string name="idwrite">ID</string>
    <string name="passwordwrite">Contraseña</string>
    <string name="buscaruta">Digita el nombre de una ruta…</string>
    <string name="paradas_text">Paradas</string>
    <string name="rutas_text">Rutas</string>
    <string name="conductores_text">Conductores</string>
    <string name="mapa_de_ciudad_valles">mapa_de_ciudad_valles</string>
    <string name="btn_back">btn_back</string>
    <string name="driver">Conductor</string>
    <string name="unidad">Autobus No. 04</string>
    <string name="status">Activo</string>
    <string name="todo">TODO</string>
    <string name="autobus_no_125">Autobus No. 125</string>
    <string name="autobus_no_220">Autobus No. 220</string>
    <string name="ejemplo_parada">Parada 1</string>
    <string name="ejem_siguiente">Siguiente</string>
    <string name="ejem_aviso">Aviso</string>
    <string name="ejem_terminaRuta">Terminar ruta</string>
    <string name="activar_ruta">Activar ruta</string>
    <string name="paradas_de_esta_ruta">Paradas de esta ruta:</string>
    <string name="rutas_designadas">Rutas designadas</string>
</resources>