<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLogin"
    android:background="@drawable/gradient_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="wrap_content"
            android:layout_height="60dp"/>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="10dp"
            app:cardCornerRadius="100dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/_20"
                android:contentDescription="@string/app_name"/>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="italic"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="10dp"
                app:cardCornerRadius="19sp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textAlignment="center"
                android:hint="@string/idwrite"
                android:maxLength="8"
                android:importantForAutofill="no"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="10dp"
                app:cardCornerRadius="19sp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:hint="@string/passwordwrite"
                    android:maxLength="8"
                    android:importantForAutofill="no"/>
            </android.support.v7.widget.CardView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ENTRAR"
                tools:ignore="HardcodedText" />

        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>