<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminMenuMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_layout"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_layout"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/admin"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <LinearLayout
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/borders_icons_menus"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/admin_icon"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

        </RelativeLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2"
            android:orientation="horizontal"
            android:useDefaultMargins="true">

            <LinearLayout
                android:layout_width="190dp"
                android:layout_height="230dp"
                style="@style/MenuTheme.AdminMenu"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/red_point_1_icon"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paradas_text"
                    style="@style/TextTheme.AdminMenu"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="190dp"
                android:layout_height="230dp"
                style="@style/MenuTheme.AdminMenu"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/red_point_1_icon"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rutas_text"
                    style="@style/TextTheme.AdminMenu"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="190dp"
                android:layout_height="230dp"
                style="@style/MenuTheme.AdminMenu"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/driver_icon"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conductores_text"
                    style="@style/TextTheme.AdminMenu"/>

            </LinearLayout>

        </GridLayout>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>